# elphi

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README.md  annotated.html  annotated_dup.js  classelphi_1_1ElphiException-members.html  classelphi_1_1ElphiException.html  classelphi_1_1ElphiException.js  classelphi_1_1ElphiException__coll__graph.md5  classelphi_1_1ElphiException__inherit__graph.map  classelphi_1_1FileDescriptor-members.html  classelphi_1_1FileDescriptor.html  classelphi_1_1FileDescriptor.js  classelphi_1_1PerfEvents-members.html  classelphi_1_1PerfEvents.html  classelphi_1_1PerfEvents.js  classelphi_1_1PerfEvents__coll__graph.map  classelphi_1_1PerfEvents__coll__graph.md5  classelphi_1_1data_1_1PerfCpuSampler-members.html  classelphi_1_1data_1_1PerfCpuSampler.html  classelphi_1_1data_1_1PerfCpuSampler.js  classelphi_1_1data_1_1PerfCpuSampler__coll__graph.map  classelphi_1_1data_1_1PerfCpuSampler__coll__graph.md5  classes.html  cpu__sampler_8cpp.html  cpu__sampler_8cpp.js  cpu__sampler_8cpp__incl.map  cpu__sampler_8cpp__incl.md5  cpu__sampler_8cpp_source.html  cpu__sampler_8hpp.html  cpu__sampler_8hpp.js  cpu__sampler_8hpp__dep__incl.map  cpu__sampler_8hpp__dep__incl.md5  cpu__sampler_8hpp__incl.map  (+189 more)
.github/workflows/: build-sca.yml  build.yml
cmake/: project_options.cmake
elphi/: CMakeLists.txt
elphi/examples/: CMakeLists.txt  cpu_sampling.cpp  system_sampling.cpp
elphi/include/elphi/: cpu_sampler.hpp  exception.hpp  file_descriptor.hpp  hello.hpp  perf_cpu_sampler.hpp  perf_events.hpp  sampler.hpp  timeline_view.hpp  utils.hpp
elphi/lib/: cpu_sampler.cpp  timeline_view.cpp  utils.cpp
elphi/src/: cpu_sampler.cpp  file_descriptor.cpp  hello.cpp  perf_cpu_sampler.cpp  perf_events.cpp  sampler.cpp  timeline_view.cpp  utils.cpp
elphi/test/: CMakeLists.txt  mock_syscalls.cpp  mock_syscalls.hpp  test_file_descriptor.cpp  test_hello.cpp  test_perf_events.cpp  test_sampler.cpp  test_timeline_view.cpp  test_utils.cpp  utils.hpp
include/elphi/: hello.hpp
scripts/: format_codebase.sh  gen_coverage.sh  run_tests.sh  run_unit.sh  sca_clang_tidy.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+22 more)
src/: hello.cpp  main.cpp
tui/: CMakeLists.txt
tui/src/: main.cpp
